add_library(Units STATIC
        Economic.cpp
        DefenceMap.cpp
        GenericControls.cpp
        GeoControl.cpp
        Interpolation.cpp
        MutationEngine.cpp
        ToolzerController.cpp
        UnitAttribute.cpp
        GenericUnit.cpp
        TrustMap.cpp
        CorpseDynamic.cpp
        Nature.cpp
        RealInterpolation.cpp
        RealUnit.cpp
        IronBullet.cpp
        IronExplosion.cpp
        IronLegion.cpp
        SecondGun.cpp
        Squad.cpp
        BuildingBlock.cpp
        BuildMaster.cpp
        FrameChild.cpp
        FrameCore.cpp
        FrameField.cpp
        FrameLegion.cpp
        FramePlant.cpp
        IronBuilding.cpp
        IronClusterUnit.cpp
        IronDigger.cpp
        IronFrame.cpp
        IronPort.cpp
        TerrainMaster.cpp
        WarBuilding.cpp
        FilthAnts.cpp
        FilthCrow.cpp
        FilthDaemon.cpp
        FilthDragon.cpp
        FilthEye.cpp
        FilthGhost.cpp
        FilthRat.cpp
        FilthShark.cpp
        FilthVolcano.cpp
        FilthWasp.cpp
        FilthWorm.cpp
        GenericFilth.cpp
        Triggers.cpp
        EnergyConsumer.cpp
)

target_include_directories(Units PRIVATE
        "${PROJECT_SOURCE_DIR}/Source/XTool"
        "${PROJECT_SOURCE_DIR}/Source/Util"
        "${PROJECT_SOURCE_DIR}/Source/Render/inc"
        "${PROJECT_SOURCE_DIR}/Source/Render/client"
        "${PROJECT_SOURCE_DIR}/Source/Network"
        "${PROJECT_SOURCE_DIR}/Source/Physics"
        "${PROJECT_SOURCE_DIR}/Source/UserInterface"
        "${PROJECT_SOURCE_DIR}/Source/Sound"
        "${PROJECT_SOURCE_DIR}/Source/Terra"
        "${PROJECT_SOURCE_DIR}/Source/tx3d"
        "${PROJECT_SOURCE_DIR}/Source/GeoLogic"
        "${PROJECT_SOURCE_DIR}/Source/AI"
        "${PROJECT_SOURCE_DIR}/Source/Game/Scripts"
        "${PROJECT_SOURCE_DIR}/Source/Game"
        .
)

target_compile_options(Units PRIVATE ${PERIMETER_COMPILE_OPTIONS})
